<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txtA2Directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_a2_directions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSumHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sum_heading"
        app:layout_constraintBottom_toTopOf="@id/btnAct3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtA2Directions" />

    <TextView
        android:id="@+id/txtSumVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sum_vehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSumHeading"
        app:layout_constraintBottom_toTopOf="@+id/txtSumDistance"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/txtSumDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sum_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSumVehicle"
        app:layout_constraintBottom_toTopOf="@id/txtSumCost"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="328dp" />
    <TextView
        android:id="@+id/txtSumCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sum_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSumDistance"
        app:layout_constraintBottom_toTopOf="@id/btnAct3"/>

    <Button
        android:id="@+id/btnAct3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_act_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSumDistance"
        app:layout_constraintBottom_toTopOf="@id/btnMain1"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/btnMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>