<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_directions"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioSedan"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/editNumMiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDirections"
        tools:layout_editor_absoluteY="19dp">

        <RadioButton
            android:id="@+id/radioSedan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sedan"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="137dp" />

        <RadioButton
            android:id="@+id/radioVan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_van"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="137dp" />

        <RadioButton
            android:id="@+id/radioSmartCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_smart_car"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="212dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editNumMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnAct2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDistance" />

    <Button
        android:id="@+id/btnAct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_act_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNumMiles" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_distance"
        app:layout_constraintBottom_toTopOf="@id/editNumMiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>